# SoftwareArchitecture

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml  build.yml
source/: CMakeLists.txt  DependencyInversionPrinciple.cxx  InterfaceSegregation_Principle.cxx  LiskovSubstitutionPrinciple_FactoryPattern.cxx  LiskovSubstitution_Principle_FactoryPattern.cxx  OpenClosedPrinciple.cxx  OpenClosed_Principle.cxx  SingleResponsibilityPrinciple.cxx
